Refactor tests to enhance readability and fix inconsistent formatting